--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,9 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <title>Tool List</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
 <h1>Tool List</h1>
+
+<form action="/" method="post">
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name"><br><br>
+
+  <label for="size">Size:</label>
+  <input type="number" id="size" name="size" step="any"><br><br>
+
+  <label for="unit">Unit:</label>
+  <input type="text" id="unit" name="unit"><br><br>
+
+  <label for="actions">Actions:</label>
+  <div id="actionInputs">
+    <input type="text" name="actions" placeholder="Enter action"><br>
+  </div>
+
+  <input type="button" value="Add Action" onclick="addInput()"><br><br>
+
+  <input type="submit" value="Add Tool">
+</form>
+
 <table>
   <thead>
   <tr>
