--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -3,21 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Tool List</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/img/style.css">
 </head>
 <body>
 <div class="container">
-    <h1>Tool List</h1>
-
     <form action="/" method="post">
+        <div class="text-center">
+            <img src="/img/logo.jpg" style="max-width: 300px;">
+            <h1 style="text-align: center">Tool box</h1>
+        </div>
+      <div style="max-width: 500px; margin: 0 auto;">
+        <nav class="navbar bg-bodys-tertiary d-flex flex-wrap">
+          <form class="container-fluid justify-content-start btn-group">
+            <button class="btn btn-outline-success me-2" type="button"><a href="/" style="text-decoration: none; color: inherit;">Create tool</a></button>
+            <button class="btn btn-outline-success me-2" type="button"><a href="/read" style="text-decoration: none; color: inherit;">Read tools</button>
+            <button class="btn btn-outline-success me-2" type="button"><a href="/" style="text-decoration: none; color: inherit;">Update tool</button>
+            <button class="btn btn-outline-success me-2" type="button"><a href="/" style="text-decoration: none; color: inherit;">Delete tool</button>
+          </form>
+        </nav>
+      </div>
+
         <div class="mb-3">
             <label for="name" class="form-label">Name:</label>
             <input type="text" id="name" name="name" class="form-control">
