--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -1,86 +1,55 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Tool List</title>
+    <title>Tool Box</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/img/style.css">
+    <link rel="stylesheet" href="../static/style.css">
 </head>
-<body>
-<div class="container">
-    <form action="/" method="post">
-        <div class="text-center">
-            <img src="/img/logo.jpg" style="max-width: 300px;">
-            <h1 style="text-align: center">Tool box</h1>
-        </div>
-      <div style="max-width: 500px; margin: 0 auto;">
-        <nav class="navbar bg-bodys-tertiary d-flex flex-wrap">
-          <form class="container-fluid justify-content-start btn-group">
-            <button class="btn btn-outline-success me-2" type="button"><a href="/" style="text-decoration: none; color: inherit;">Create tool</a></button>
-            <button class="btn btn-outline-success me-2" type="button"><a href="/read" style="text-decoration: none; color: inherit;">Read tools</button>
-            <button class="btn btn-outline-success me-2" type="button"><a href="/" style="text-decoration: none; color: inherit;">Update tool</button>
-            <button class="btn btn-outline-success me-2" type="button"><a href="/" style="text-decoration: none; color: inherit;">Delete tool</button>
-          </form>
-        </nav>
-      </div>
-
-        <div class="mb-3">
-            <label for="name" class="form-label">Name:</label>
-            <input type="text" id="name" name="name" class="form-control">
-        </div>
-
-        <div class="mb-3">
-            <label for="size" class="form-label">Size:</label>
-            <input type="number" id="size" name="size" step="any" class="form-control">
-        </div>
-
-        <div class="mb-3">
-            <label for="unit" class="form-label">Unit:</label>
-            <input type="text" id="unit" name="unit" class="form-control">
-        </div>
-
-        <div class="mb-3">
-            <label for="actions" class="form-label">Actions:</label>
-            <div id="actionInputs">
-                <input type="text" name="actions" placeholder="Enter action" class="form-control mb-2">
+<body class="overflow-y-scroll">
+<div class="container text-center ">
+    <nav class="navbar navbar-expand bg-body-tertiary">
+        <div class="container-fluid justify-content-center">
+            <a class="navbar-brand" href="/">Tool Box</a>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" href="create">Create</a>
+                    <a class="nav-link" href="read">Read</a>
+                    <a class="nav-link" href="update">Update</a>
+                    <a class="nav-link" href="delete">Delete</a>
+                    <a class="nav-link" href="search">Search</a>
+                </div>
             </div>
-            <button type="button" class="btn btn-primary" onclick="addInput()">Add Action</button>
         </div>
+    </nav>
+    <h1>Tool Box</h1>
+    <img src="/img/logo.jpg" style="max-width: 300px; margin-bottom: 30px">
+    <div class="row">
+        <div class="col">
+            <h3>Add tool</h3>
+            <form action="/create" method="post">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name"><br><br>
 
-        <button type="submit" class="btn btn-success">Add Tool</button>
-    </form>
+                <label for="size">Size:</label>
+                <input type="number" id="size" name="size" step="any"><br><br>
 
-    <table class="table mt-4">
-        <thead>
-        <tr>
-            <th>Name</th>
-            <th>Size</th>
-            <th>Actions</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="tool : ${tools}">
-            <td th:text="${tool.name}"></td>
-            <td th:text="${tool.toolSize.size} + ' ' + ${tool.toolSize.unit}"></td>
-            <td>
-                <ul>
-                    <li th:each="action : ${tool.actions}" th:text="${action}"></li>
-                </ul>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+                <label for="unit">Unit:</label>
+                <input type="text" id="unit" name="unit"><br><br>
+
+                <label for="actions">Actions:</label>
+                <div id="actionInputs">
+                    <input type="text" name="actions" placeholder="Enter action"><br>
+                </div>
+                <button type="button" class="btn btn-warning" onclick="addInput()">Add Action</button>
+                </br></br>
+
+                <button type="submit" class="btn btn-success">Add Tool</button>
+            </form>
+        </div>
+    </div>
 </div>
-<script>
-    function addInput() {
-        var input = document.createElement('input');
-        input.type = 'text';
-        input.name = 'actions';
-        input.placeholder = 'Enter action';
-        input.className = 'form-control mb-2';
-        document.getElementById('actionInputs').appendChild(input);
-    }
-</script>
+
 </body>
 </html>
