--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -28,7 +28,7 @@
     <div class="row">
         <div class="col">
             <h3>Add tool</h3>
-            <form action="/create" method="post">
+            <form action="/update" method="post">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name"><br><br>
 
@@ -50,15 +50,5 @@
         </div>
     </div>
 </div>
-<script>
-    function addInput() {
-        var input = document.createElement('input');
-        input.type = 'text';
-        input.name = 'actions';
-        input.placeholder = 'Enter action';
-        input.className = 'form-control mb-2';
-        document.getElementById('actionInputs').appendChild(input);
-    }
-</script>
 </body>
 </html>
