--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
     <div class="row">
         <div class="col">
             <h2>Hello in tool box</h2>
-
+            <h3>Choose from the menu what you want to do, then rate it with 15 points :D</h3>
         </div>
     </div>
 </div>
