--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Tool Box</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/style.css">
 </head>
 <body class="overflow-y-scroll">
@@ -27,15 +28,10 @@
     <div class="row">
         <div class="col">
             <h3>Search tools</h3>
-
-
-<!--            <form th:action="@{/filterText}" method="post" th:object="${value}"  class="d-flex my-2">-->
-<!--                <input th:field="${value.value}"  name="text" class="form-control" type="text" placeholder="Find tool...">-->
-<!--                <button class="btn btn-primary" type="submit">Szukaj</button>-->
-<!--            </form>-->
-
-
-
+            <form th:action="@{/findTool}" method="post" class="d-flex my-2">
+                <input name="name" class="form-control" type="text" placeholder="Find tool...">
+                <button class="btn btn-primary" type="submit">Szukaj</button>
+            </form>
             <table class="table">
                 <thead>
                 <tr>
@@ -45,7 +41,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="tool : ${tools}">
+                <tr th:each="tool : ${searchResults}">
                     <td th:text="${tool.name}"></td>
                     <td th:text="${tool.toolSize.size} + ' ' + ${tool.toolSize.unit}"></td>
                     <td>
