--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -2,10 +2,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
 }
 
-.table {
-    display: flex;
-    justify-content: center;
+.span {
+    color: black;
+    font-weight: bold;
 }
