--- a/src/main/resources/templates/delete.html
+++ b/src/main/resources/templates/delete.html
@@ -5,7 +5,7 @@
     <title>Tool Box</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body class="overflow-y-scroll">
 <div class="container text-center ">
@@ -14,11 +14,11 @@
             <a class="navbar-brand" href="/">Tool Box</a>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="create">Create</a>
-                    <a class="nav-link" href="read">Read</a>
-                    <a class="nav-link" href="update">Update</a>
-                    <a class="nav-link" href="delete">Delete</a>
-                    <a class="nav-link" href="search">Search</a>
+                    <a class="nav-link" href="create"><span class="span">C</span>reate</a>
+                    <a class="nav-link" href="read"><span class="span">R</span>ead</a>
+                    <a class="nav-link" href="update"><span class="span">U</span>pdate</a>
+                    <a class="nav-link" href="delete"><span class="span">D</span>elete</a>
+                    <a class="nav-link" href="search"><span class="span">S</span>earch</a>
                 </div>
             </div>
         </div>
@@ -26,11 +26,12 @@
     <h1>Tool Box</h1>
     <img src="/img/logo.jpg" style="max-width: 300px; margin-bottom: 30px">
     <div class="row">
-        <div class="col">
-            <h3>Delete tool</h3>
-            <form action="/delete" method="DELETE">
-                <label for="name">Name:</label><br>
-                <input type="text" id="name" name="name"><br><br>
+        <div class="col d-flex justify-content-center">
+            <form action="/delete" method="post" style="justify-content: center">
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name:</label>
+                    <input type="text" class="form-control" id="name" name="name">
+                </div>
                 <button type="submit" class="btn btn-danger mb-5">Delete Tool</button>
             </form>
         </div>
