--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Tool Box</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body class="overflow-y-scroll">
 <div class="container text-center ">
@@ -13,11 +13,11 @@
             <a class="navbar-brand" href="/">Tool Box</a>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="create">Create</a>
-                    <a class="nav-link" href="read">Read</a>
-                    <a class="nav-link" href="update">Update</a>
-                    <a class="nav-link" href="delete">Delete</a>
-                    <a class="nav-link" href="search">Search</a>
+                    <a class="nav-link" href="create"><span class="span">C</span>reate</a>
+                    <a class="nav-link" href="read"><span class="span">R</span>ead</a>
+                    <a class="nav-link" href="update"><span class="span">U</span>pdate</a>
+                    <a class="nav-link" href="delete"><span class="span">D</span>elete</a>
+                    <a class="nav-link" href="search"><span class="span">S</span>earch</a>
                 </div>
             </div>
         </div>
