--- a/src/main/resources/templates/delete.html
+++ b/src/main/resources/templates/delete.html
@@ -25,6 +25,7 @@
     </nav>
     <h1>Tool Box</h1>
     <img src="/img/logo.jpg" style="max-width: 300px; margin-bottom: 30px">
+    <h3>Remove all tools named</h3>
     <div class="row">
         <div class="col d-flex justify-content-center">
             <form action="/delete" method="post" style="justify-content: center">
