--- a/src/main/resources/templates/delete.html
+++ b/src/main/resources/templates/delete.html
@@ -25,13 +25,13 @@
     </nav>
     <h1>Tool Box</h1>
     <img src="/img/logo.jpg" style="max-width: 300px; margin-bottom: 30px">
-    <h3>Remove all tools named</h3>
+    <h3>Remove tool by ID</h3>
     <div class="row">
         <div class="col d-flex justify-content-center">
             <form action="/delete" method="post" style="justify-content: center">
                 <div class="mb-3">
-                    <label for="name" class="form-label">Name:</label>
-                    <input type="text" class="form-control" id="name" name="name">
+                    <label for="id" class="form-label">Id:</label>
+                    <input type="number" class="form-control" id="id" name="id">
                 </div>
                 <button type="submit" class="btn btn-danger mb-5">Delete Tool</button>
             </form>
