--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -35,6 +35,7 @@
             <table class="table table-striped">
                 <thead>
                 <tr>
+                    <th>Id</th>
                     <th>Name</th>
                     <th>Size</th>
                     <th>Actions</th>
@@ -42,6 +43,7 @@
                 </thead>
                 <tbody>
                 <tr th:each="tool : ${searchResults}">
+                    <td th:text="${tool.id}"></td>
                     <td th:text="${tool.name}"></td>
                     <td th:text="${tool.toolSize.size} + ' ' + ${tool.toolSize.unit}"></td>
                     <td>
