--- a/src/main/resources/templates/read.html
+++ b/src/main/resources/templates/read.html
@@ -2,11 +2,72 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Tool Box</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
 </head>
 <body class="overflow-y-scroll">
+
+
+<div class="container">
+
+    <h3>Employee Directory</h3>
+    <hr>
+    <a th:href="@{/employees/showFormForAdd}"
+       class="btn btn-primary btn-sm mb-3">Add Employee</a>
+    <table class="table table-bordered table-striped">
+        <thead class="table-dark">
+        <tr>
+            <th>Id</th>
+            <th>Name</th>
+            <th>Size</th>
+            <th>Hand tool operations</th>
+            <th>Actions</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <tr th:each="tool : ${tools}">
+
+            <td th:text="${tool.id}"/>
+            <td th:text="${tool.name}"/>
+            <td th:text="${tool.toolSize.size} + ' ' + ${tool.toolSize.unit}"/>
+            <td>
+                <ul style="list-style-type: none">
+                    <li th:each="action : ${tool.actions}" th:text="${action}"></li>
+                </ul>
+            </td>
+
+            <td>
+<!--                <a th:href="@{/employees/showFormForUpdate(employeeId=${tempEmployee.id})}"-->
+<!--                   class="btn btn-info btn-sm">-->
+<!--                    Update-->
+<!--                </a>-->
+<!--                <a th:href="@{/employees/delete(employeeId=${tempEmployee.id})}"-->
+<!--                   class="btn btn-danger btn-sm ms-1"-->
+<!--                   onclick="if (!(confirm('Are you sure you want to delete this employee?'))) return false">-->
+<!--                    Delete-->
+<!--                </a>-->
+            </td>
+
+        </tr>
+        </tbody>
+    </table>
+
+</div>
+
+
+
+
+
+
+<!--
+
+
+
+
+
 <div class="container text-center ">
     <nav class="navbar navbar-expand bg-body-tertiary">
         <div class="container-fluid justify-content-center">
@@ -51,6 +112,6 @@
             </table>
         </div>
     </div>
-</div>
+</div>-->
 </body>
 </html>
