--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -8,6 +8,58 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body class="overflow-y-scroll">
+
+
+
+
+<div class="container">
+    <h3>Tool Box</h3>
+    <hr>
+    <p class="h4 mb-4">Save tool</p>
+    <form action="#" th:action="@{saveToolkit}" th:object="${tools}" method="post">
+<!--        <input type="hidden" th:field="*{id}">-->
+        <input type="text" th:field="*{name}"
+               class="form-control mb-4 w-25" placeholder="First name">
+
+<!--        <input type="text" th:field="*{size}"-->
+<!--               class="form-control mb-4 w-25" placeholder="Last name">-->
+
+<!--        <input type="text" th:field="*{unit}"-->
+<!--               class="form-control mb-4 w-25" placeholder="Email">-->
+
+        <button type="submit" class="btn btn-info col-2">Save</button>
+
+    </form>
+    <hr>
+<!--    <a th:href="@{/read}">Back to Employees List</a>-->
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="container text-center ">
     <nav class="navbar navbar-expand bg-body-tertiary">
         <div class="container-fluid justify-content-center">
@@ -25,10 +77,10 @@
     </nav>
     <h1>Tool Box</h1>
     <img src="/img/logo.jpg" style="max-width: 300px; margin-bottom: 30px">
-    <h3>Add tool</h3>
+    <h3>Add new tool</h3>
     <div class="row">
         <div class="col d-flex justify-content-center">
-            <form action="/update" method="post" style="justify-content: center">
+            <form action="/create" method="post" style="justify-content: center">
                 <div class="mb-3">
                     <label for="name" class="form-label">Name:</label>
                     <input type="text" class="form-control" id="name" name="name">
@@ -48,7 +100,7 @@
                 <button type="button" class="btn btn-warning" onclick="addInput()">Add Action</button>
                 </br></br>
 
-                <button type="submit" class="btn btn-success mb-5">Add Tool</button>
+                <button type="submit" class="btn btn-success mb-5 p-3">Add Tool</button>
             </form>
         </div>
     </div>
@@ -63,5 +115,16 @@
         document.getElementById('actionInputs').appendChild(input);
     }
 </script>
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
