--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -2,12 +2,15 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Tool Box</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
 </head>
-<body class="overflow-y-scroll">
+
+<body>
+
 <div class="container text-center ">
     <nav class="navbar navbar-expand bg-body-tertiary">
         <div class="container-fluid justify-content-center">
@@ -28,7 +31,7 @@
     <h3>Add new tool</h3>
     <div class="row">
         <div class="col d-flex justify-content-center">
-            <form action="/create" method="post" style="justify-content: center">
+            <form action="/showFormForAddp" method="post" style="justify-content: center">
                 <div class="mb-3">
                     <label for="name" class="form-label">Name:</label>
                     <input type="text" class="form-control" id="name" name="name">
@@ -63,5 +66,33 @@
         document.getElementById('actionInputs').appendChild(input);
     }
 </script>
+
+
+<!--<div class="container">
+    <h3>Add New Tool</h3>
+    <hr>
+    <p class="h4 mb-4">Save Tool</p>
+    <form action="#" th:action="@{/saveToolkit}" th:object="${tool}" method="post">
+        <input type="hidden" th:field="*{id}">
+        <input type="text" th:field="*{name}"
+               class="form-control mb-4 w-25" placeholder="Name">
+
+        <input type="number" th:field="*{toolSize}"
+               class="form-control mb-4 w-25" placeholder="Size">
+
+&lt;!&ndash;        <input type="text" th:field="*{toolSize.unit()}"&ndash;&gt;
+&lt;!&ndash;               class="form-control mb-4 w-25" placeholder="Unit">&ndash;&gt;
+
+        <button type="submit" class="btn btn-info col-2">Save</button>
+
+    </form>
+&lt;!&ndash;    <hr>&ndash;&gt;
+    <a th:href="@{/read}">Back to Tools List</a>
+
+</div>-->
+
 </body>
 </html>
+
+
+
