--- a/src/main/resources/templates/read.html
+++ b/src/main/resources/templates/read.html
@@ -12,10 +12,10 @@
 
 <div class="container">
 
-    <h3>Employee Directory</h3>
+    <h3>Tool Box</h3>
     <hr>
-    <a th:href="@{/employees/showFormForAdd}"
-       class="btn btn-primary btn-sm mb-3">Add Employee</a>
+    <a th:href="@{/showFormForAdd}"
+       class="btn btn-primary btn-sm mb-3">Add Tool</a>
     <table class="table table-bordered table-striped">
         <thead class="table-dark">
         <tr>
@@ -40,78 +40,21 @@
             </td>
 
             <td>
-<!--                <a th:href="@{/employees/showFormForUpdate(employeeId=${tempEmployee.id})}"-->
-<!--                   class="btn btn-info btn-sm">-->
-<!--                    Update-->
-<!--                </a>-->
-<!--                <a th:href="@{/employees/delete(employeeId=${tempEmployee.id})}"-->
-<!--                   class="btn btn-danger btn-sm ms-1"-->
-<!--                   onclick="if (!(confirm('Are you sure you want to delete this employee?'))) return false">-->
-<!--                    Delete-->
-<!--                </a>-->
+                <a th:href="@{/showFormForUpdate(id=${tool.id})}"
+                   class="btn btn-info btn-sm">
+                    Update
+                </a>
+                <a th:href="@{/delete(id=${tool.id})}"
+                   class="btn btn-danger btn-sm ms-1"
+                   onclick="if (!(confirm('Are you sure you want to delete this tool?'))) return false">
+                    Delete
+                </a>
             </td>
 
         </tr>
         </tbody>
     </table>
-
 </div>
 
-
-
-
-
-
-<!--
-
-
-
-
-
-<div class="container text-center ">
-    <nav class="navbar navbar-expand bg-body-tertiary">
-        <div class="container-fluid justify-content-center">
-            <a class="navbar-brand" href="/">Tool Box</a>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link" href="create"><span class="span">C</span>reate</a>
-                    <a class="nav-link" href="read"><span class="span">R</span>ead</a>
-                    <a class="nav-link" href="update"><span class="span">U</span>pdate</a>
-                    <a class="nav-link" href="delete"><span class="span">D</span>elete</a>
-                    <a class="nav-link" href="search"><span class="span">S</span>earch</a>
-                </div>
-            </div>
-        </div>
-    </nav>
-    <h1>Tool Box</h1>
-    <img src="/img/logo.jpg" style="max-width: 300px; margin-bottom: 30px">
-    <div class="row">
-        <div class="col">
-            <h3>Read tools list</h3>
-            <table class="table table-striped">
-                <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Name</th>
-                    <th>Size</th>
-                    <th>Actions</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="tool : ${tools}">
-                    <td th:text="${tool.id}"></td>
-                    <td th:text="${tool.name}"></td>
-                    <td th:text="${tool.toolSize.size} + ' ' + ${tool.toolSize.unit}"></td>
-                    <td>
-                        <ul style="list-style-type: none">
-                            <li th:each="action : ${tool.actions}" th:text="${action}"></li>
-                        </ul>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>-->
 </body>
 </html>
