--- a/src/main/resources/templates/read.html
+++ b/src/main/resources/templates/read.html
@@ -24,7 +24,7 @@
 
     <h3>Tool Box</h3>
     <hr>
-    <a th:href="@{/updateTool}"
+    <a th:href="@{/showFormForAdd}"
        class="btn btn-primary btn-sm mb-3">Add Tool</a>
     <table class="table table-bordered table-striped">
         <thead class="table-dark">
