Gotowe bez update

--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link" th:href="@{/read}">Read</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://github.com/KozlowskiKamil">Contact</a>
+                        </li>
                     </ul>
                     <form class="d-flex" role="search" th:action="@{/findTool}" method="post">
                         <input name="name" class="form-control me-2" type="search" placeholder="Find tool...">
