--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -48,9 +48,9 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-6">
+        <div class="col-6 pb-5 mb-5">
 
-            <p class="h4 mb-4">Add new Tool</p>
+            <p class="h4 mb-4" style="color: deepskyblue">Add new Tool</p>
             <form action="/create" method="post">
                 <label for="name" class="form-label">Name:</label>
                 <input type="text" class="form-control mb-4 w-30" placeholder="Name" id="name" name="name">
