--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,6 +46,7 @@
                 <thead class="table-dark">
                     <th style="text-align: center"><span>Welcome. Nice to see you on the website. It will also be nice to see 15 points</span></th>
             </table>
+            <div><img src="/img/toolbox.png"></div>
         </div>
     </div>
 </div>
