--- a/src/main/resources/templates/read.html
+++ b/src/main/resources/templates/read.html
@@ -42,7 +42,7 @@
         <img src="/img/logo2.png" alt="Banner Image" class="img-fluid">
     </div>
     <div class="row">
-        <div class="col">
+        <div class="col pb-5 mb-5">
             <table class="table table-bordered table-striped">
                 <thead class="table-dark">
                 <tr>
