--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -48,9 +48,9 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-6">
+        <div class="col-6 pb-5 mb-5">
 
-            <p class="h4 mb-4">Edit tool</p>
+            <p class="h4 mb-4" style="color: deepskyblue">Edit tool</p>
             <form th:action="@{/update/{id}(id=*{id})}" method="post" th:object="${toolUpdateDTO}">
                 <label for="name" class="form-label">Name:</label>
                 <input th:field="*{name}" type="text" class="form-control mb-4 w-30" placeholder="Name" id="name" name="name" required>
