--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,9 +8,14 @@
 
     <header th:replace="~{/fragments::header}"></header>
 
+    <div class="banner">
+        <div>
+            <img src="/img/logo2.png" alt="Banner Image" class="img-fluid">
+        </div>
+    </div>
+
     <div class="row">
         <div class="col">
-
             <table class="table table-bordered table-striped">
                 <thead class="table-dark">
                 <th style="text-align: center"><span>Welcome. Nice to see you on the website. It will also be nice to see 15 points</span>
