--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -16,6 +16,12 @@
 
     <header th:replace="~{/fragments::header}"></header>
 
+    <div class="banner">
+        <div>
+            <img src="/img/logo2.png" alt="Banner Image" class="img-fluid">
+        </div>
+    </div>
+
     <div class="row">
         <div class="col pb-5 mb-5">
             <table class="table table-bordered table-striped">
