dodanie img do narzędzi

--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -11,7 +11,7 @@
     <div class="banner">
         <div>
             <img src="/img/logo2.png" alt="Banner Image" class="img-fluid">
-            <table class="table table-bordered table-striped">
+            <table class="table table-bordered table-striped" style="font-size: larger">
                 <thead class="table-dark">
                 <th style="text-align: center"><span>You can add any number of tools and actions for tools</span></th>
             </table>
