--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
 
     <div class="row">
         <div class="col">
-            <table class="table table-bordered table-striped">
+            <table class="table table-bordered table-striped" style="font-size: larger">
                 <thead class="table-dark">
                 <th style="text-align: center"><span>Welcome. Nice to see you on the website. It will also be nice to see 15 points</span>
                 </th>
