--- a/src/main/resources/templates/read.html
+++ b/src/main/resources/templates/read.html
@@ -17,18 +17,22 @@
     <div class="row">
         <div class="col pb-5 mb-5">
             <table class="table table-bordered table-striped">
-                <thead class="table-dark">
+                <thead class="table-dark" style="font-size: larger">
                 <tr>
                     <th>Id</th>
+                    <th>Img</th>
                     <th>All Tolls Name</th>
                     <th>Size</th>
                     <th>Hand tool operations</th>
                     <th>Actions</th>
                 </tr>
                 </thead>
-                <tbody>
+                <tbody style="font-size: larger">
                 <tr th:each="tool : ${tools}" th:object="${tool}">
                     <td th:text="${tool.id}"/>
+                    <td style="display: flex; justify-content: center; align-items: center;">
+                        <img th:src="${tool.img}" alt="Tool Image" style="max-height: 100px;">
+                    </td>
                     <td th:text="${tool.name}"/>
                     <td th:text="${tool.toolSize.size} + ' ' + ${tool.toolSize.unit}"/>
                     <td>
