--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:font-size="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,15 +13,12 @@
 </head>
 <body class="overflow-y-scroll">
 <div class="container">
-
     <header th:replace="~{/fragments::header}"></header>
-
     <div class="banner">
         <div>
             <img src="/img/logo2.png" alt="Banner Image" class="img-fluid">
         </div>
     </div>
-
     <div class="row">
         <div class="col pb-5 mb-5">
             <table class="table table-bordered table-striped">
@@ -59,8 +56,6 @@
         </div>
     </div>
 </div>
-
 <footer th:replace="~{/fragments::footer}"></footer>
-
 </body>
 </html>
