--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head th:replace="~{/fragments::head}"></head>
-
 <body class="overflow-y-scroll">
 <div class="container">
     <header>
@@ -33,8 +31,6 @@
         </nav>
         <br>
     </header>
-
-
     <div class="banner">
         <div>
             <img src="/img/logo2.png" alt="Banner Image" class="img-fluid">
@@ -44,22 +40,20 @@
             </table>
         </div>
     </div>
-
     <div class="row">
         <div class="col-6 pb-5 mb-5">
             <p class="h4 mb-4" style="color: deepskyblue">Edit Tool</p>
             <form th:action="@{/update/{id}(id=*{id})}" method="post" th:object="${toolUpdateDTO}">
                 <input th:field="*{img}" type="text" id="img" name="img" hidden="hidden">
-
                 <label for="name" class="form-label">Name:</label>
-                <input th:field="*{name}" type="text" class="form-control mb-4 w-30" placeholder="Name" id="name" name="name" required>
-
+                <input th:field="*{name}" type="text" class="form-control mb-4 w-30" placeholder="Name" id="name"
+                       name="name" required>
                 <label for="size" class="form-label">Size:</label>
-                <input th:field="*{size}" type="number" class="form-control mb-4 w-30" placeholder="Size" id="size" name="size" step="any" min="0" required>
-
+                <input th:field="*{size}" type="number" class="form-control mb-4 w-30" placeholder="Size" id="size"
+                       name="size" step="any" min="0" required>
                 <label for="unit" class="form-label">Unit:</label>
-                <input th:field="*{unit}" type="text" class="form-control mb-4 w-30" placeholder="Unit" id="unit" name="unit" required>
-
+                <input th:field="*{unit}" type="text" class="form-control mb-4 w-30" placeholder="Unit" id="unit"
+                       name="unit" required>
                 <div id="actionInputs" class="mb-3">
                     <label for="actions" class="form-label">Actions:</label>
                     <input th:field="*{actions}" type="text" class="form-control mb-4 w-30" id="actions" name="actions"
@@ -69,9 +63,7 @@
                 <br>
                 <button type="submit" class="btn btn-info col-2 mb-5 pb-2">Save Tool</button>
             </form>
-
         </div>
-
         <script>
             function addInput() {
                 var input = document.createElement('input');
@@ -82,15 +74,11 @@
                 document.getElementById('actionInputs').appendChild(input);
             }
         </script>
-
         <div class="col-6">
             <img src="/img/img1.png" alt="Logo" class="img-fluid float-end">
         </div>
-
     </div>
 </div>
-
 <footer th:replace="~{/fragments::footer}"></footer>
-
 </body>
 </html>
