--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{/fragments::head}"></head>
@@ -6,20 +7,45 @@
     <header th:replace="~{/fragments::header}"></header>
     <div class="banner">
         <div>
-            <img src="/img/logo2.png" alt="Banner Image" class="img-fluid">
         </div>
     </div>
     <div class="row">
-        <div class="col">
-            <table class="table table-bordered table-striped" style="font-size: larger">
-                <thead class="table-dark">
-                <th style="text-align: center"><span>Welcome. Nice to see you on the website.</span>
-                </th>
+        <div class="col pb-5 mb-5">
+            <table class="table table-bordered table-striped">
+                <thead class="table-dark" style="font-size: larger">
+                <tr>
+                    <th>Id</th>
+                    <th>Img</th>
+                    <th>All Tolls Name</th>
+                    <th>Size</th>
+                    <th>Hand tool operations</th>
+                    <th>Actions</th>
+                </tr>
+                </thead>
+                <tbody style="font-size: larger">
+                <tr th:each="tool : ${tools}" th:object="${tool}">
+                    <td th:text="${tool.id}"/>
+                    <td style="display: flex; justify-content: center; align-items: center;">
+                        <img th:src="${tool.img}" alt="Tool Image" style="max-height: 100px;">
+                    </td>
+                    <td th:text="${tool.name}"/>
+                    <td th:text="${tool.toolSize.size} + ' ' + ${tool.toolSize.unit}"/>
+                    <td>
+                        <ul style="list-style-type: none">
+                            <li th:each="action : ${tool.actions}" th:text="${action}"></li>
+                        </ul>
+                    </td>
+                    <td>
+                        <a th:href="@{/update/{id}(id=*{id})}" class="btn btn-info btn-sm">Update</a>
+                        <a th:href="@{/delete(id=${tool.id})}" class="btn btn-danger btn-sm ms-2"
+                           onclick="if (!(confirm('Are you sure you want to delete this tool?'))) return false">Delete</a>
+                    </td>
+                </tr>
+                </tbody>
             </table>
-            <div><img src="/img/toolbox.png"></div>
         </div>
     </div>
 </div>
 <footer th:replace="~{/fragments::footer}"></footer>
 </body>
-</html>
+</html>-->
