--- a/src/main/resources/templates/read.html
+++ b/src/main/resources/templates/read.html
@@ -6,12 +6,11 @@
     <header th:replace="~{/fragments::header}"></header>
     <div class="banner">
         <div>
-            <img src="/img/logo2.png" alt="Banner Image" class="img-fluid">
         </div>
     </div>
     <div class="row">
         <div class="col pb-5 mb-5">
-            <table class="table table-bordered table-striped">
+            <table class="table table-bordered table-striped mt-3">
                 <thead class="table-dark" style="font-size: larger">
                 <tr>
                     <th>Id</th>
