--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -6,7 +6,7 @@
     <header th:replace="~{/fragments::header}"></header>
     <div class="banner">
         <div>
-            <table class="table table-bordered table-striped" style="font-size: larger">
+            <table class="table table-bordered table-striped mt-3" style="font-size: larger">
                 <thead class="table-dark">
                 <th style="text-align: center"><span>You can add any number of tools and actions for tools</span></th>
             </table>
