--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,4 +1,3 @@
-<!--
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{/fragments::head}"></head>
@@ -11,7 +10,7 @@
     </div>
     <div class="row">
         <div class="col pb-5 mb-5">
-            <table class="table table-bordered table-striped">
+            <table class="table table-bordered table-striped mt-3">
                 <thead class="table-dark" style="font-size: larger">
                 <tr>
                     <th>Id</th>
@@ -48,4 +47,4 @@
 </div>
 <footer th:replace="~{/fragments::footer}"></footer>
 </body>
-</html>-->
+</html>
