--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -18,6 +18,8 @@
             <form action="/create" method="post">
                 <label for="name" class="form-label">Name:</label>
                 <input type="text" class="form-control mb-4 w-30" placeholder="Name" id="name" name="name" required>
+                <label for="location" class="form-label">Location:</label>
+                <input type="text" class="form-control mb-4 w-30" placeholder="Location" id="location" name="location" required>
                 <label for="size" class="form-label">Size:</label>
                 <input type="number" class="form-control mb-4 w-30" placeholder="Size" id="size" name="size" step="any"
                        min="0"
